--- a/webproject/tripnavigator/static/tripnavigator/css/map-navigation.css
+++ b/webproject/tripnavigator/static/tripnavigator/css/map-navigation.css
@@ -1,24 +1,24 @@
 @media (max-width: 576px) {
-    /* Fjern horisontal padding på containeren på mobil */
-    .container-fluid.px-md-4 {
-      padding-left: 10px !important;
-      padding-right: 10px !important;
-    }
-    /* Sørg for, at rækker og kolonner fylder 100% */
-    .row {
-      margin-left: 0 !important;
-      margin-right: 0 !important;
-    }
-    [class*="col-"] {
-      padding-left: 0 !important;
-      padding-right: 0 !important;
-      width: 100% !important;
-      max-width: 100% !important;
-    }
-    /* Sørg for, at alle kort og lister er inden for viewporten */
-    .card, h2, .list-group, #map {
-      max-width: 100% !important;
-      margin: 0 !important;
-      box-sizing: border-box;
-    }
+  /* Remove horizontal padding on the container for mobile devices */
+  .container-fluid.px-md-4 {
+    padding-left: 10px !important;
+    padding-right: 10px !important;
   }
+  /* Ensure rows and columns take full width */
+  .row {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
+  [class*="col-"] {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+    width: 100% !important;
+    max-width: 100% !important;
+  }
+  /* Make sure cards, headings, lists, and the map stay within the viewport */
+  .card, h2, .list-group, #map {
+    max-width: 100% !important;
+    margin: 0 !important;
+    box-sizing: border-box;
+  }
+}
