--- a/webproject/tripnavigator/templates/tripnavigator/register.html
+++ b/webproject/tripnavigator/templates/tripnavigator/register.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta tags and Bootstrap CSS/JS for responsive design -->
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, width=device-width">
 
@@ -14,7 +15,7 @@
 </head>
 <body>
 
- <!-- Registration Form Container -->
+<!-- Registration Form Container -->
 <div class="form-container">
     <main class="form-signin">
         <form action="{% url 'register' %}" method="post">
@@ -22,20 +23,25 @@
             <img src="{% static 'tripnavigator/images/logo-black-vertical.png' %}" alt="Logo" class="me-2 img-fluid sign-in-picture">
             <h1 class="h3 mb-3 fw-normal">Register</h1>
 
+            <!-- First Name Field -->
             <div class="form-floating mb-3">
                 <input type="text" class="form-control" id="floatingFirstName" name="first_name" placeholder="First Name">
                 <label for="floatingFirstName">First Name</label>
             </div>
 
+            <!-- Email Field -->
             <div class="form-floating mb-3">
                 <input type="email" class="form-control" id="floatingInput" name="email" placeholder="name@example.com">
                 <label for="floatingInput">Email address</label>
             </div>
 
+            <!-- Password Field -->
             <div class="form-floating mb-3">
                 <input type="password" class="form-control" id="floatingPassword" name="password" placeholder="Password">
                 <label for="floatingPassword">Password</label>
             </div>
+
+            <!-- Confirm Password Field -->
             <div class="form-floating mb-3">
                 <input type="password" class="form-control" id="floatingPasswordConfirm" name="confirmation" placeholder="Confirm Password">
                 <label for="floatingPasswordConfirm">Confirm Password</label>
@@ -45,6 +51,7 @@
                 <div class="message">{{ message }}</div>
             {% endif %}
         
+            <!-- Register Button -->
             <input class="btn btn-dark btn-border" style="padding: 0.5rem 1rem;" type="submit" value="Register">
         </form>
     </main>
